# emakiWM

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/emakiwm/: Cargo.toml  build.rs
crates/emakiwm-core/: Cargo.toml
crates/emakiwm-core/src/: anim.rs  filter.rs  layout.rs  lib.rs
crates/emakiwm-setup/: Cargo.toml  build.rs
crates/emakiwm-setup/src/: dialog.rs  install.rs  main.rs
crates/emakiwm/src/: autostart.rs  border.rs  com.rs  config.rs  events.rs  ipc.rs  main.rs  scan.rs  tray.rs  wm.rs  ws.rs
crates/emakiwmc/: Cargo.toml
crates/emakiwmc/src/: main.rs
docs/: IMPLEMENTATION_NOTES.md  REQUIREMENTS.md
examples/: config.example.toml
examples/zebar/: emakiwm-widget.html
