[package]
name = "emakiwm-setup"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
windows-core = "0.62"
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }

[build-dependencies]
embed-manifest = "1.4"
