[package]
name = "emakiwm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
emakiwm-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
regex = "1"

[target.'cfg(windows)'.dependencies]
# com.rs の #[interface] マクロが ::windows_core を参照するため直接依存が必要
windows-core = "0.62"
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

[build-dependencies]
embed-manifest = "1.4"
